# coffee-shop-solid

./: .gitignore  Cargo.toml  EXTENSIONS.md  README.md  start.ps1
src/: lib.rs  main.rs
src/adapters/: cash_payment.rs  console_notifier.rs  credit_card_payment.rs  json_storage.rs  memory_storage.rs  mod.rs
src/domain/: beverage.rs  customer.rs  mod.rs  order.rs
src/ports/: mod.rs  notifier.rs  payment.rs  repository.rs
src/services/: mod.rs  order_service.rs  pricing_calculator.rs
